--- a/src/index.css
+++ b/src/index.css
@@ -242,6 +242,13 @@ label {
   bottom: 0;
   left: 20%;
   right: 20%;
-padding: 0.5px;
+  padding: 0.5px;
   background: var(--primary-color);
+}
+
+/* inline Link */
+.inlineLink {
+  padding: 0.5rem 1rem;
+  font-size: large;
+  color: var(--primary-color);
 }
