--- a/src/assets/style/tasks/tasks.module.css
+++ b/src/assets/style/tasks/tasks.module.css
@@ -5,8 +5,6 @@
   padding: 0.5rem 1.25rem;
 }
 
-
-
 .taskTitleAndPlay {
   display: flex;
   gap: 0.5rem;
@@ -28,4 +26,8 @@
 .taskDuration {
   display: flex;
   gap: 0.5rem;
+}
+
+.taskTitle {
+  word-wrap: break-word;
 }
