--- a/src/assets/style/UI/modal.module.css
+++ b/src/assets/style/UI/modal.module.css
@@ -9,6 +9,7 @@
 }
 
 .modal {
+  display: flex;
   position: fixed;
   top: 10vh;
   left: 5%;
@@ -22,7 +23,7 @@
 
 @media (min-width: 768px) {
   .modal {
-    width: 35rem;
+    width: 25rem;
     left: calc(50% - 20rem);
   }
 }
@@ -35,5 +36,11 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@media (max-width: 40rem) {
+  .modal {
+    max-width: 20rem;
   }
 }
